Arrumando o problema nos links internos.

--- a/about.html
+++ b/about.html
@@ -3,22 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Sobre</title>
+    <style>
+    body {
+      display: flex;
+      background-color: black;  /* Fundo preto */
+      color: white;             /* Texto branco para contraste */
+      justify-content: center;    /* Centraliza na horizontal */
+      height: 100vh;              /* Ocupa 100% da altura da tela */
+      margin: 0px;                /* Remove espaçamento padrão */
+      width: 50%;
+      justify-self: center;
+    }
+    </style>
 </head>
 <body>
-    <h1> <u>Quem somos:</u> </h1>
-    <h2> Blog do Braga é um sistema de post online, focado no uso exclusivo e único
-        do seu desenvolvedor.
-    </h2>
-    <hr>
-    <h2> "Blog do Braga" foi criado no dia 01/10/2025</h2>
-    <h3> Sua ideia principal era suprir a necessidade de melhorar os conhecimentos
-        de um desenvolvedor junior.</h3>
-        
-    <h3>Pensando nisso, o mesmo descidiu criar uma pagina de blog pessoal,
-        que começou sendo apenas um documento HTML, hoje e um sistema completo,
-        onde o usuário pode criar novos post, ver uma previa dos antigos e até
-        navegar através de setas por dentre as paginas, podendo ver as publicações antigas
-        que aos poucos ele vai melhorando conforme sua necessidade e curiosidade. </h3>
-        <a href="/index.html">  ⬅️ Voltar para página inicial</a>
+    <div>
+        <h1> <u>Quem somos:</u> </h1>
+        <h2> Blog do Braga é um sistema de post online, focado no uso exclusivo e único
+            do seu desenvolvedor.
+        </h2>
+        <hr>
+        <h2> "Blog do Braga" foi criado no dia 01/10/2025</h2>
+        <h3> Sua ideia principal era suprir a necessidade de melhorar os conhecimentos
+            de um desenvolvedor junior.</h3>
+            
+        <h3>Pensando nisso, o mesmo descidiu criar uma pagina de blog pessoal,
+            que começou sendo apenas um documento HTML, hoje e um sistema completo,
+            onde o usuário pode criar novos post, ver uma previa dos antigos e até
+            navegar através de setas por dentre as paginas, podendo ver as publicações antigas
+            que aos poucos ele vai melhorando conforme sua necessidade e curiosidade. </h3>
+            <a href="../index.html">  ⬅️ Voltar para página inicial</a>
+    </div>
 </body>
 </html>
